fix edit form wrap

--- a/static/main.css
+++ b/static/main.css
@@ -524,3 +524,7 @@ footer {
   float: right;
 }
 
+.word-break {
+  word-break: break-word;
+}
+
